--- a/src/kendoTuto/wwwroot/app/grid/views/grid.html
+++ b/src/kendoTuto/wwwroot/app/grid/views/grid.html
@@ -1,4 +1,4 @@
-﻿<div class="col-lg-8 col-lg-offset-2 col-md-8 col-md-offset-2 col-sm-8 col-sm-offset-2">
+﻿<div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
     <kendo-grid k-options="vm.mainGridOptions">
         <div k-detail-template>
             <kendo-tabstrip>
@@ -11,10 +11,10 @@
                 </div>
                 <div>
                     <ul class="contact-info-form">
-                        <li><label>Country:</label> <input class="k-textbox" ng-model="dataItem.Country" /></li>
-                        <li><label>City:</label> <input class="k-textbox" ng-model="dataItem.City" /></li>
-                        <li><label>Address:</label> {{dataItem.Address}}</li>
-                        <li><label>Home phone:</label> {{dataItem.HomePhone}}</li>
+                        <li><label>Country:</label> <input class="k-textbox" ng-model="dataItem.country" /></li>
+                        <li><label>City:</label> <input class="k-textbox" ng-model="dataItem.city" /></li>
+                        <li><label>Address:</label> {{dataItem.address}}</li>
+                        <li><label>Home phone:</label> {{dataItem.homePhone}}</li>
                     </ul>
                 </div>
             </kendo-tabstrip>
